@@ -1,4 +1,4 @@
-If you want to use the json methods `is<T>`, `as<T>`, `add`, `set` and `operator=` to access or modify with a new type, you need to show json how to interact with that type, by extending `value_adapter` in the `jsoncons` namespace.
+If you want to use the json methods `is<T>`, `as<T>`, `add`, `set` and `operator=` to access or modify with a new type, you need to show json how to interact with that type, by extending `json_type_traits` in the `jsoncons` namespace.
 
 For example, by including the header file `jsoncons_ext/boost/type_extensions.hpp`, you can access and modify `json` values with `boost::gregorian` dates.
 
@@ -53,13 +53,13 @@ The output is
     }
 
 You can look in the header file `jsoncons_ext/boost/type_extensions.hpp`
-to see how the specialization of `value_adapter` that supports
+to see how the specialization of `json_type_traits` that supports
 the conversions works. In this implementation the `boost` date values are stored in the `json` values as strings.
 
     namespace jsoncons
     {
         template <typename Alloc>
-        class value_adapter<char,Alloc,boost::gregorian::date>
+        class json_type_traits<char,Alloc,boost::gregorian::date>
         {
         public:
             bool is(const basic_json<char,Alloc>& val) const
